--- a/#src/html/_content.html
+++ b/#src/html/_content.html
@@ -1,4 +1,3 @@
-
 <div class="content">
     <div class="container">
         <div class="breadcrumbs">
@@ -43,7 +42,7 @@
             </article>
             <article class="article">
                 <img src="../images/article_2.png" alt="article-1" class="article__img">
-                <h2 class="article__title"><a href="#">elevate you experience</a></h2>
+                <h2 class="article__title"><a href="#">FARNBOROUGH Airshow 2018</a></h2>
                 <div class="article__descr">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -59,7 +58,7 @@
             </article>
             <article class="article">
                 <img src="../images/article_3.png" alt="article-1" class="article__img">
-                <h2 class="article__title"><a href="#">elevate you experience</a></h2>
+                <h2 class="article__title"><a href="#">regatta in england</a></h2>
                 <div class="article__descr">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -75,7 +74,7 @@
             </article>
             <article class="article">
                 <img src="../images/article_4.png" alt="article-1" class="article__img">
-                <h2 class="article__title"><a href="#">elevate you experience</a></h2>
+                <h2 class="article__title"><a href="#">silverstone</a></h2>
                 <div class="article__descr">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -91,7 +90,7 @@
             </article>
             <article class="article">
                 <img src="../images/article_5.png" alt="article-1" class="article__img">
-                <h2 class="article__title"><a href="#">elevate you experience</a></h2>
+                <h2 class="article__title"><a href="#">wimbledon</a></h2>
                 <div class="article__descr">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -107,7 +106,7 @@
             </article>
             <article class="article">
                 <img src="../images/article_6.png" alt="article-1" class="article__img">
-                <h2 class="article__title"><a href="#">elevate you experience</a></h2>
+                <h2 class="article__title"><a href="#">Lorem ipsum</a></h2>
                 <div class="article__descr">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
