--- a/#src/index.html
+++ b/#src/index.html
@@ -17,6 +17,9 @@
 	<main class="main">
 		@@include('html/_content.html')
 	</main>
+	<footer class="footer">
+		@@include('html/_footer.html')
+	</footer>
 	<script src="js/script.min.js"></script>
 </body>
 
