--- a/#src/html/_header.html
+++ b/#src/html/_header.html
@@ -2,11 +2,11 @@
 	<div class="header__top">
 		<div class="container">
 			<div class="top-menu">
-				<div class="phone">
+				<div class="top-menu__phone phone">
 					<a href="tel:+442077198816">+44 20 7719 8816</a>
 					<span>круглосуточно</span>
 				</div>
-				<div class="phone">
+				<div class="top-menu__phone phone">
 					<a href="tel:+447771007676">+44 777 100 7676</a>
 					<span>Viber & WhatsUp</span>
 				</div>
