fix mobile-menu btns

--- a/#src/html/_header.html
+++ b/#src/html/_header.html
@@ -40,15 +40,19 @@
 	</div>
 
 	<!--  mobile menu   -->
-	<div class="mobile__menu">
-		<nav class="mobile__nav">
-			<a class="mobile__menu-link">Главная</a> 
-			<a class="mobile__menu-link">Услуги</a> 
-			<a class="mobile__menu-link">Автопарк</a> 
-			<a class="mobile__menu-link">События</a> 
-			<a class="mobile__menu-link">О нас</a> 
-			<a class="mobile__menu-link">Контакты</a> 
+	<div class="mobile-menu">
+		<nav class="mobile-menu__nav">
+			<a class="mobile-menu__link">Главная</a> 
+			<a class="mobile-menu__link">Услуги</a> 
+			<a class="mobile-menu__link">Автопарк</a> 
+			<a class="mobile-menu__link">События</a> 
+			<a class="mobile-menu__link">О нас</a> 
+			<a class="mobile-menu__link">Контакты</a> 
 		</nav>
+		<div class="mobile-menu__btns">
+			<button class="btn mobile-menu__btn">узнать тариф</button>
+			<button class="btn mobile-menu__btn">сделать заказ</button>
+		</div>
 	</div>
 	<!--  // mobile menu	-->
 </header>
